--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                          map = L.map('map').setView([48.8589, 2.3469], 13).on("click", onMapClick);
                          L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
                            maxZoom: 19,
-                           attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
+                           attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a> | Data <a href="https://data.education.gouv.fr/explore/dataset/fr-en-ips_ecoles">1</a>, <a href="https://data.education.gouv.fr/explore/dataset/fr-en-ips_colleges">2</a>, <a href="https://opendata.paris.fr/explore/dataset/secteurs-scolaires-ecoles-elementaires">3</a>, <a href="https://opendata.paris.fr/explore/dataset/secteurs-scolaires-colleges">4</a>, <a href="https://data.education.gouv.fr/explore/dataset/fr-en-adresse-et-geolocalisation-etablissements-premier-et-second-degre">5</a> | <a href="https://www.flaticon.com/packs/building-14">Icons</a>'
                            }).addTo(map);
                          // Auto-search address if in url params
                          let params = new URLSearchParams(document.location.search);
@@ -197,22 +197,14 @@ html, body, #map {
     height: 100%;
     width: 100vw;
 }
-form { position: fixed; z-index: 10; background-color: white;}
+form { position: fixed; z-index: 10; top: 0; right: 0; background-color: rgba(255, 255, 255, 0.8); padding: 2px; }
 #map { z-index: 0; }
 </style>
         <body>
                 <form onsubmit="return search();">
-                        <label for="address">Adresse :</label>
+                        <label for="address">Rue :</label>
 <input type="text" id="address" name="address">
 <input type="submit" value="Recherche">
-                Données :
-                <a href="https://data.education.gouv.fr/explore/dataset/fr-en-ips_ecoles">IPS écoles</a>,
-                <a href="https://data.education.gouv.fr/explore/dataset/fr-en-ips_colleges">IPS collèges</a>,
-                <a href="https://opendata.paris.fr/explore/dataset/etablissementgs-scolaires-ecoles-elementaires">Écoles</a>,
-                <a href="https://opendata.paris.fr/explore/dataset/etablissementgs-scolaires-colleges">Collèges</a>,
-                <a href="https://opendata.paris.fr/explore/dataset/secteurs-scolaires-ecoles-elementaires">Secteurs élémentaires</a>,
-                <a href="https://opendata.paris.fr/explore/dataset/secteurs-scolaires-colleges">Secteurs collèges</a>.
-                <a href="https://www.flaticon.com/packs/building-14">Icônes</a>.
                 </form>
                  <div id="map"></div>
 
